# life-rs

./: Cargo.toml  Dockerfile  Makefile  README.md
src/: args.rs  lib.rs  main.rs
src/game/: cell.rs  grid.rs  mod.rs
