[package]
edition = "2021"
name = "life"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.1", features = ["derive"] }
pancurses = "0.17.0"
rand = "0.8.5"
serde = {version = "1.0.188", features = ["derive"]}
